# sechat_bridge

./: .gitignore  README.md  pyproject.toml
sechat_bridge/: DiscordClient.py  TotalClient.py  __main__.py  db.py  html_to_md.py
